--- a/main/Schedule/templates/delete_schedule.html
+++ b/main/Schedule/templates/delete_schedule.html
@@ -5,7 +5,7 @@
     }
 </style>
 
-<h1>Delete Movie</h1>
+<h1>Delete Schedule</h1>
 
 <form action={{url_for("schedule.delete_schedule", id=schedule.id)}} method="POST">
     <h3>Delete <i>{{schedule.movieref.title}}</i>?</h3>
