--- a/main/Schedule/templates/edit_schedule.html
+++ b/main/Schedule/templates/edit_schedule.html
@@ -55,6 +55,27 @@
         You haven't created any screens. <a href="{{url_for("screen.create_screen")}}">Create here</a><br><br>
     {% endif %}
 
+    Price
+    {% if prices %}
+        <select name="price">
+            {% for uniqueid, name in prices %}
+                <option value="{{uniqueid}}"
+                    {% if temp.price %}
+                        {%if temp.price == uniqueid %}
+                            selected
+                        {% endif %}
+                        {% else %}
+                        {% if uniqueid == schedule.price%}
+                            selected
+                        {% endif %}
+                    {% endif %}
+                >{{name}}</option>
+            {% endfor %}
+        </select><br><br>
+    {% else %}<br>
+        You haven't created any price so create it before movie forward <a href="{{url_for("schedule.create_price")}}">Create here</a><br><br>
+    {% endif %}
+
     Start Time 
     <input type="datetime-local" name="starttime" id="starttime" value="{{starttime}}" min={{minTime}}><br><br>
     <i>Endtime gets auto updated on start time change with addition of movie duration</i><br><br>
