--- a/main/Schedule/templates/list_schedule.html
+++ b/main/Schedule/templates/list_schedule.html
@@ -38,12 +38,13 @@
 
 <h1>Schedule List</h1>
 <a href="{{url_for("schedule.create_schedule")}}">Add</a>&nbsp;<br><br>
-<i>Table is in ascending order of start_time</i><br>
 {% if schedulesList %}
+<i>Table is in ascending order of start_time</i><br>
 <table style="width:100%;"><br>
     <tr>
         <th>Movie</th>
         <th>Screen</th>
+        <th>Price</th>
         <th>Start time</th>
         <th>End Time</th>
         <th colspan=2>Actions</th>
@@ -52,6 +53,7 @@
         <tr class={{schedule.status.value}}>
             <td><strong>{{schedule.movieref.title}}</strong></td>
             <td>{{schedule.screenref.name}}</td>
+            <td>{{schedule.priceref.name}}</td>
             <td>{{schedule.start_time}}</td>
             <td>{{schedule.end_time}}</td>
             <td><a href="{{url_for("schedule.update_schedule",id=schedule.id)}}">Edit</a></td>
