--- a/main/Authentication/templates/profile.html
+++ b/main/Authentication/templates/profile.html
@@ -8,13 +8,14 @@
         </ul>
     {% endif %}
 {% endwith %}
-<h1>Hello {{user.name}}!</h1>
-<p>Username : {{user.username}}</p>
-<p>Email : {{user.email}}</p>
-<p>Password : {{user.password}}</p>
-<p>Created_at : {{user.created_at}}</p>
-<p>Updated_at : {{user.updated_at}}</p>
+<h1>Welcome, {{user.name}}</h1>
+
+<p>Username: {{user.username}}</p>
+<p>Email: {{user.email}}</p>
+<p>Created at: {{user.created_at}}</p>
+<p>Updated at: {{user.updated_at}}</p>
+
+
 <a href="{{url_for('authentication.logout')}}">Logout</a><br>
-<a href="{{url_for('authentication.update')}}">Update</a><br>
 <a href="{{url_for('authentication.change_password')}}">Change Password</a><br>
 <a href="{{url_for('authentication.delete')}}">Delete</a><br>
