--- a/main/Movie/templates/movie_list.html
+++ b/main/Movie/templates/movie_list.html
@@ -22,8 +22,11 @@
         padding:7px;
     }
     img{
-        width:100%%;
+        /*width:100%%;*/
         height:100px; 
+    }
+    .expired{
+        background-color:rgba(255,0,0,0.3);
     }
 </style>
 
@@ -40,7 +43,7 @@
         <th colspan=2>Actions</th>
     </tr>
     {% for m in moviesList %}
-        <tr>
+        <tr {% if m.status.value=="EXPIRED" %}class="expired"{% endif %}>
             <td><img src="{{url_for('static', filename=m.poster_url)}}"></td>
             <td><strong>{{m.title}}</strong></td>
             <td>{{m.duration}}</td>
