--- a/main/Seats/templates/edit_seat.html
+++ b/main/Seats/templates/edit_seat.html
@@ -1,4 +1,4 @@
-{% with messages = get_flashed_messages() %}
+<!-- {% with messages = get_flashed_messages() %} -->
     {% if messages %}
         <ul>
         {% for msg in messages %}
@@ -11,6 +11,7 @@
 
 <h1>Edit Seat</h1>
 <form action={{url_for("seats.edit_seats")}} method="POST">
+
     Row <input type="number" name="row" value={{temp.row}}><br>
     Column <input type="number" name="column" value={{temp.column}}><br>
     Type
