--- a/main/Payment/templates/payment_home.html
+++ b/main/Payment/templates/payment_home.html
@@ -16,8 +16,16 @@
     text-align: right; /* Align the button to the right */
     background-color:rgba(0,0,0,0.4);
     display:flex;
+    flex-direction: column;
+    gap: 10px;
     justify-content:center;
     align-items:center;
+}
+.payment-button-container form {
+    width: 80%;
+}
+.payment-button-container button {
+    width: 100%;
 }
 #khalti-payment-button{
     background-color: #5C2D91;
@@ -30,6 +38,19 @@
 }
 #khalti-payment-button:hover{
     background-color:#6d2db5;
+}
+#mock-payment-button{
+    background-color: #white;
+    font-size:20px;
+    cursor: pointer;
+    color: black;
+    border: 1px solid black;
+    padding: 5px 10px;
+    border-radius: 2px;
+}
+#mock-payment-button:hover{
+    background-color: green;
+    color:white;
 }
 .movieContainer{
     display: flex;
@@ -45,7 +66,7 @@
 }
 {% endblock %}
 {%block head%}
-<script src="https://khalti.s3.ap-south-1.amazonaws.com/KPG/dist/2020.12.17.0.0.0/khalti-checkout.iffe.js"></script>
+<!--<script src="https://khalti.s3.ap-south-1.amazonaws.com/KPG/dist/2020.12.17.0.0.0/khalti-checkout.iffe.js"></script>-->
 {%endblock%}
 {% block content%}
 <div class="container">
@@ -74,8 +95,11 @@
     <p>Total Price: Rs. {{totalPrice}}</p>
     </div>
     <div class="payment-button-container">
-        <form action="{{url_for("payment.initiate_payment")}}" method="post">
+        <form action="{{url_for("payment.khalti.initiate_payment")}}" method="post">
             <button type="submit" id="khalti-payment-button">Pay with Khalti</button>
+        </form>
+        <form action="{{url_for("payment.mock.initiate_payment")}}" method="post">
+            <button type="submit" id="mock-payment-button">Mock Pay</button>
         </form>
     </div>
 </div>
