--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -69,6 +69,7 @@
         <ul>
           <li><a href="{{url_for("home.index")}}">Home</a></li>
           {% if session['user'] %}
+            <li><a href="{{url_for("ticket.mytickets")}}">My Tickets</a></li>
             <li><a href="{{url_for("authentication.profile")}}">Welcome,&nbsp;{{session['user']}}</a></li>
             <li><a href="{{url_for("authentication.logout")}}">Logout</a></li>
           {%else%}
