Added UI to Authentication Admin

--- a/main/Authentication/templates/change_password.html
+++ b/main/Authentication/templates/change_password.html
@@ -1,3 +1,14 @@
+{% extends 'base.html' %}
+
+{% block styles %}
+.container{
+    margin:20px;
+}
+{% endblock %}
+
+{% block content %}
+
+<div clas="container">
 {% with messages = get_flashed_messages() %}
     {% if messages %}
         <ul>
@@ -21,3 +32,5 @@
 <a href="{{url_for('authentication.profile')}}">Profile</a><br>
 <a href="{{url_for('authentication.update')}}">Update</a><br>
 <a href="{{url_for('authentication.delete')}}">Delete</a><br>
+</div>
+{%endblock%}
