--- a/main/Authentication/templates/admin/admin_profile.html
+++ b/main/Authentication/templates/admin/admin_profile.html
@@ -1,9 +1,6 @@
-{% extends 'base.html' %}
+{% extends 'admin/admin.html' %}
 
-{% block styles %}
-.container{
-    margin:0 20px;
-}
+{% block css %}
 .profile-container{
     width:100%;
     background-color: #444;
@@ -24,10 +21,9 @@
     font-weight: 300;
 }
 .profile-container .buttons{
-    margin-left:20px;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
 }
 .profile-container a{
     width: fit-content;
@@ -42,8 +38,7 @@
 }
 {% endblock %}
 
-{% block content %}
-<div class="container">
+{% block admin %}
     <div class="profile-container">
         <h2>Welcome, {{user.name}}</h2>
 
@@ -51,13 +46,9 @@
         <p>Email: <span>{{user.email}}</span></p>
         <p>Created at: <span>{{user.created_at}}</span></p>
         <p>Updated at: <span>{{user.updated_at}}</span></p>
-        <div class="buttons">
-            <a href="{{url_for('authentication.update')}}">Update</a>
+        <!--<div class="buttons">
             <a href="{{url_for('authentication.change_password')}}">Change Password</a>
             <a href="{{url_for('authentication.delete')}}">Delete</a>
-        </div>
+        </div>-->
     </div>
-</div>
-
-    
 {%endblock%}
