--- a/main/Authentication/templates/delete.html
+++ b/main/Authentication/templates/delete.html
@@ -1,3 +1,14 @@
+{% extends 'base.html' %}
+
+{% block styles %}
+.container{
+    margin:20px;
+}
+{% endblock %}
+
+{% block content %}
+
+<div clas="container">
 {% with messages = get_flashed_messages() %}
     {% if messages %}
         <ul>
@@ -18,3 +29,5 @@
 <a href="{{url_for('authentication.update')}}">Update</a><br>
 <a href="{{url_for('authentication.change_password')}}">Change Password</a><br>
 <a href="{{url_for('authentication.profile')}}">Profile</a><br>
+</div>
+{% endblock %}
